Tue Mar 10 07:05:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/client.cpp
        * examples/Advanced/ch_12/server.cpp
        * examples/Advanced/ch_18/Advanced_ch_18.mpc
        * examples/Advanced/ch_18/client.cpp
        * examples/Advanced/ch_18/server.cpp
        * examples/Advanced/ch_21/Advanced_ch_21.mpc
        * examples/Advanced/ch_21/client.cpp
        * examples/Advanced/ch_21/server.cpp
          Fixed compile issues

Mon Mar  9 22:06:29 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Notify/Bug_1884_Regression/consumer.cpp:
          more wchar fixes.

Mon Mar  9 21:06:36 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/tao_other_tests.lst:

        * orbsvcs/tests/Notify/Validate_Client/README:
        * orbsvcs/tests/Notify/Validate_Client/notify.conf:
        * orbsvcs/tests/Notify/Validate_Client/persistency_copy:
        * orbsvcs/tests/Notify/Validate_Client/run_test.pl:

          Added test for Notify_Service client connection validation
          feature.

        * bin/tao_other_tests.lst:

          Added Notify Validate_Client test.

Mon Mar  9 19:08:39 UTC 2009  Olli Savia  <ops@iki.fi>

        * docs/tutorials/Quoter/RTCORBA/StockQuoter.mpc:
          Changed RTCORBA_Quoter_Admin to depend on rt_server rather than
          rt_client. This isn't quite right but it fixes nasty linking
          problem on LynxOS and doesn't do any harm on other platforms.

Mon Mar  9 14:04:35 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/Application_Test/Makefile.am:
          Added missing include directories for server build.

        * orbsvcs/tests/Notify/Bug_1884_Regression/common.h:
        * orbsvcs/tests/Notify/Bug_1884_Regression/consumer.cpp:
        * orbsvcs/tests/Notify/Bug_1884_Regression/filter.cpp:
        * orbsvcs/tests/Notify/Bug_1884_Regression/supplier.cpp:
          Clean up fuzz errors.
