@@ -183,11 +183,11 @@ private:
     const TAO_GIOP_Message_Version &version) const;
 
   /// Print out consolidate messages
-  int dump_consolidated_msg (TAO_OutputCDR &stream, bool hex_dump_only);
+  int dump_consolidated_msg (TAO_OutputCDR &stream);
 
   /// Print out a debug messages..
   void dump_msg (const char *label, const u_char *ptr,
-                 size_t len, bool hex_dump_only = false);
+                 size_t len);
 
   /// Writes the GIOP header in to @a msg
   /// @note If the GIOP header happens to change in the future, we can
